--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+
+ p {
+  background-color: #FFF689;
+  padding: 4px;
+  font-weight: bold;
+ }
+
+ a{
+  text-decoration: none;
+  text-decoration-line: none;
+ }
